# oneshot

./: README.md  license  oneshot.toml  oneshot_batch_text.toml  oneshot_images.toml  oneshot_text_from_images.toml  pyproject.toml
demo/input/: context_E01.txt  queries.csv
demo/output/: .gitignore
src/oneshot/: __init__.py  cli.py  config.py  interface.py  llm_request.py  llm_response.py  tables.py  time.py  utils.py
