[project]
name = "oneshot"
version = "0.0.2"
description = "Oneshot facilitates the issuing of 'one-shot' queries to LLMs."
readme = "README.md"
authors = [
    { name = "Johannes Elias", email = "joheli@gmx.net" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
oneshot = "oneshot.cli:cli"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ptpython>=3.0.32",
]
